--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_bloc: ^7.1.5
-  freezed: ^2.5.1
   retrofit: ^4.1.0
   dio: ^5.4.2+1
   go_router: ^13.2.0
@@ -23,6 +22,8 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   smooth_page_indicator: ^1.1.0
   http: ^1.1.0
+  easy_localization: ^3.0.5
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -38,3 +39,5 @@ dev_dependencies:
 flutter:
   generate: true
   uses-material-design: true
+  assets:
+    - assets/translations/
