--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^1.1.0
   easy_localization: ^3.0.5
   flutter_secure_storage: ^4.2.1
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
