--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   hexcolor: ^3.0.1
   json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
   provider: ^6.0.1
   dartz: ^0.10.1
   equatable: ^2.0.5
